--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
 				</tr>
 			</table>
 			<h2 id="Social_media">Social Media</h2>
-			<p>Facebook: <a href="https://www.facebook.com/truonghan28/">Trương Hàn</a></p>
-			<p>Instagram: <a href="https://www.instagram.com/tvh_2804/"> Trương Hoàn</a></p>
+			<p>Facebook: <a href="https://www.facebook.com/viethoan2804">Trương Việt Hoàn</a></p>
+			<p>Instagram: <a href="https://www.instagram.com/tvh_2804/"> Trương Việt Hoàn</a></p>
 		</div>
 		<div id="right_side">
 			<h2 id="course">Online course</h2>
