--- a/index.html
+++ b/index.html
@@ -70,30 +70,31 @@
 		</div>
 		<div id="right_side">
 			<h2 id="course">Online course</h2>
+			<p>Tất cả các sản phẩm đều được thực hiện từ hồi năm nhất và năm hai</p>
 			<div id="course_container">
 				<div class="course_item">
-					<img class="course_img" src="assets/math.jpg"/>
+					<img class="course_img" src="assets/ads.jpg"/>
 					<div class="course_title">Logic Math</div>
 					<div class="course_desc">Toán tư duy cơ bản, xây dựng nền tảng cho việc học kĩ thuật và lập trình bậc đại học</div>
 				</div>
 				<div class="course_item">
-					<img class="course_img" src="assets/web.jpg"/>
+					<img class="course_img" src="assets/thi.png"/>
 					<div class="course_title">Web Basic</div>
 					<div class="course_desc">Lập trình website cho người mới bắt đầu, xây dựng website cá nhân và hệ thống backend theo ý muốn</div>
 				</div><div class="course_item">
-					<img class="course_img" src="assets/python.jpg"/>
+					<img class="course_img" src="assets/toroi.jpg"/>
 					<div class="course_title">Python Basic</div>
 					<div class="course_desc">Lập trình python cơ bản đến nâng cao cho người mới, nắm vững kĩ thuật lập trình căn bản</div>
 				</div><div class="course_item">
-					<img class="course_img" src="assets/game.jpg"/>
+					<img class="course_img" src="assets/thihocky2.png"/>
 					<div class="course_title">Game Python</div>
 					<div class="course_desc">Lập trình Game rắn săn mồi, đồng hồ đếm ngược là flappy bird bằng thư viện đồ họa pygame</div>
 				</div><div class="course_item">
-					<img class="course_img" src="assets/data.jpg"/>
+					<img class="course_img" src="assets/giay.png"/>
 					<div class="course_title">Data Science</div>
 					<div class="course_desc">Xử dụng kĩ thuật làm sạch dữ liệu và vẽ biểu đồ bằng thư viện matplotlib để phân tích điểm thi đại học 2020</div>
 				</div><div class="course_item">
-					<img class="course_img" src="assets/ai.jpg"/>
+					<img class="course_img" src="assets/posterphimkinhdi.png"/>
 					<div class="course_title">AI Basic</div>
 					<div class="course_desc">Lập trình trí tuệ nhân tạo, thuật toán KNN, K-means, Regression và Gradient Descent, sử dụng toán cao cấp và ma trận cơ bản</div>
 				</div>
