--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
 			  <div class="container right">
 				<div class="content_timeline_right">
 				  <h2>Graphic Design</h2>
-				  <p>Thiết kế poster, banner, ấn phẩm, logo, catalogue...</p>
+				  <p>Thiết kế poster, banner, logo, catalogue...</p>
 				</div>
 			  </div>
 			  <div class="container left">
