--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" type="text/css" href="assets/css/main.css">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"/>
 	<link rel="stylesheet" type="text/css" href="assets/css/footer.css">
+	<link rel="icon" type="image/x-icon" href="assets/img/logo.ico">
 	<script src="assets/js/head.js"></script>
 	<title>Blog-Trương Việt Hoàn</title>
 
