--- a/index.html
+++ b/index.html
@@ -182,6 +182,7 @@
 			    <div class="swiper-slide"><img src="assets/img/toroi.jpg"></div>
 			    <div class="swiper-slide"><img src="assets/img/valorant.png"></div>
 			    <div class="swiper-slide"><img src="assets/img/poster_phim.png"></div>
+				<div class="swiper-slide"><img src="assets/img/zangglee.png"></div>
 			  </div>
 			  <!-- If we need pagination -->
 			  <div class="swiper-pagination"></div>
