--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 		</p>
 		<p class="doi_net">
 			Đôi nét về Trương Việt Hoàn:<br>
-			Trương Việt Hoàn là một thần đồng Toán học, Sinh học, Vật lý, Lịch sử, Địa lý, GDCD, PGS, Tiến sĩ, MBA, PHD, FIFA 22, Fan MU 20 năm, Trưởng Khoa Toán của Đại học Thủy Lợi :))) cái này tại mình bốc phét quen rồi :))
+			Trương Việt Hoàn là một thần đồng Toán học, Sinh học, Vật lý, Lịch sử, Địa lý, GDCD, PGS, Tiến sĩ, MBA, PHD, FIFA 22, Trưởng Khoa Toán của Đại học Thủy Lợi
 		</p>
 		<!-- hiệu ứng collapse-->
 		<button class="collapsible"></i></button>
