--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
 			  <div class="container left">
 				<div class="content_timeline_left">
 				  <h2>WEB</h2>
-				  <p>Tư vấn, thiết kế website theo yêu cầu với giá rẻ</p>
+				  <p>Tư vấn, thiết kế website</p>
 				</div>
 			  </div>
 			  <div class="container right">
@@ -211,7 +211,7 @@
 			  <div class="container right">
 				<div class="content_timeline_right">
 				  <h2>Homework</h2>
-				  <p>Chuyên làm hộ bài tập cho sinh viên ngành Design, các bài tập Excel, Word, PowerPoint...</p>
+				  <p>Hướng dẫn bài tập cho sinh viên ngành Design, các bài tập Excel, Word, PowerPoint...</p>
 				</div>
 			  </div>
 			</div>
