--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
 			  <div class="container right">
 				<div class="content_timeline_right">
 				  <h2>Homework</h2>
-				  <p>Hướng dẫn bài tập cho sinh viên ngành Design, các bài tập Excel, Word, PowerPoint...</p>
+				  <p>Hướng dẫn làm bài tập cho sinh viên ngành Design, các bài tập Excel, Word, PowerPoint...</p>
 				</div>
 			  </div>
 			</div>
