--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
 				</div>
 				<br>
 				<div class="bank">
-					<i class="uil uil-credit-card"></i> Ủng hộ tôi: 105872677239 VIETINBANK
+					<i class="uil uil-credit-card"></i> Hòm thư góp ý: 105872677239 VIETINBANK
 				</div>
 			</div><br><br>
 	</main>
