--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
         	</div>
         	<div class="home_center">
         		<h1>Hi, I'm Hoan</h1><br>
-        		<p class="h2">Designer</p> <br> 
-        		<p>Sinh viên năm 4 ngành thiết kế đồ họa trường Đại học Công nghệ Thông tin và Truyền thông Thái Nguyên</p><br>
+        		<p class="h2">UI/UX Designer</p> <br> 
+        		<p>Cựu sinh viên ngành thiết kế đồ họa Trường Đại học Công nghệ Thông tin và Truyền thông Thái Nguyên</p><br>
         		<img src="assets/img/pen.png" width="66px">
         	</div>
 
