--- a/index.html
+++ b/index.html
@@ -93,8 +93,9 @@
 			Trương Việt Hoàn là một thần đồng Toán học, Sinh học, Vật lý, Lịch sử, Địa lý, GDCD, PGS, Tiến sĩ, MBA, PHD, FIFA 22, Trưởng Khoa Toán của Đại học Thủy Lợi
 		</p><br><br>
 		<h2 id="thong_tin">Bài hát yêu thích</h2><br><br>
-		<iframe width="560" height="315" src="https://www.youtube.com/embed/igkoDTvBsBw?si=CHun5LkL8sblUHa-" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe><br><br>
-		
+		<div class="video-container">
+			<iframe width="560" height="315" src="https://www.youtube.com/embed/igkoDTvBsBw?si=CHun5LkL8sblUHa-" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe><br><br>
+		</div>
 		<strong>Con đường học vấn</strong>
 		<!-- hiệu ứng collapse-->
 		<button class="collapsible"></i></button>
