--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
 		</p><br><br>
 		<h2 id="thong_tin">Bài hát yêu thích</h2><br><br>
 		<div class="video-container">
-			<iframe width="560" height="315" src="https://www.youtube.com/embed/igkoDTvBsBw?si=CHun5LkL8sblUHa-" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe><br><br>
-		</div>
+			<iframe width="560" height="315" src="https://www.youtube.com/embed/igkoDTvBsBw?si=CHun5LkL8sblUHa-" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>>
+		</div><br><br
 		<strong>Con đường học vấn</strong>
 		<!-- hiệu ứng collapse-->
 		<button class="collapsible"></i></button>
