--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 		</p>
 		<p class="doi_net">
 			Đôi nét về Trương Việt Hoàn:<br>
-			Trương Việt Hoàn là một thần đồng Toán học, Sinh học, Vật lý, Lịch sử, Địa lý, GDCD, PGS, Tiến sĩ, MBA, PHD, FIFA 22, Trưởng Khoa Toán của Đại học Thủy Lợi
+			Trương Việt Hoàn là một thần đồng Toán học, Sinh học, Vật lý, Lịch sử, Địa lý, GDCD, PGS, Tiến sĩ, MBA, PHD, Trưởng Khoa Toán của Đại học Thủy Lợi
 		</p><br><br>
 		<h2 id="thong_tin">Bài hát yêu thích</h2><br><br>
 		<div class="video-container">
