--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
   -->
   <title>Truong Viet Hoan</title>
   <meta name="title" content="Julia - I'm User Interface Designer & Developer.">
-  <meta name="description" content="This is a personal portfolio html template made by codewithsadee">
 
   <!-- 
     - favicon
@@ -28,7 +27,7 @@
   <!-- 
     - custom css link
   -->
-  <link rel="stylesheet" href="./assets/css/style.css">
+  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
   <!-- 
     - preload images
