--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
         <div class="container">
 
           <figure class="hero-banner">
-            <img src="./assets/images/hoan-image.png" width="560" height="540" alt="Julia" class="w-100"
+            <img src="./assets/images/hoan-image.png" width="560" height="540" alt="Hoan" style="border-radius: 15px;" class="w-100"
               data-reveal="top">
 
             <img src="./assets/images/hero-shape.svg" width="203" height="91" alt="250+ Projects Done" class="shape"
