--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     - primary meta tags
   -->
   <title>Truong Viet Hoan</title>
-  <meta name="title" content="Julia - I'm User Interface Designer & Developer.">
+  <meta name="title" content="Hoan - I'm User Interface Designer & Web Builder.">
 
   <!-- 
     - favicon
@@ -47,14 +47,14 @@
     <div class="container">
 
       <a href="#" class="logo">
-        <img src="./assets/images/hoan.svg" width="90" height="36" alt="Julia home">
+        <img src="./assets/images/hoan.svg" width="90" height="36" alt="Hoan home">
       </a>
 
       <nav class="navbar" data-navbar>
 
         <div class="navbar-top">
           <a href="#" class="logo">
-            <img src="./assets/images/hoan-light.svg" width="64" height="24" alt="Julia home">
+            <img src="./assets/images/hoan-light.svg" width="64" height="24" alt="Hoan home">
           </a>
 
           <button class="nav-close-btn" aria-label="close menu" data-nav-toggler>
