--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
             </p>
 
             <div class="btn-wrapper" data-reveal="top" data-reveal-delay="1s">
-              <a href="#" class="btn btn-primary">See My Works</a>
+              <a href="#project" class="btn btn-primary">See My Works</a>
 
               <a href="#contact-form" class="btn btn-secondary">Contact Me</a>
             </div>
