--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     - primary meta tags
   -->
   <title>Truong Viet Hoan</title>
-  <meta name="title" content="Hoan - I'm User Interface Designer & Web Builder.">
+  <meta name="title" content="Hoan - I'm UI/UX Designer & Web Builder.">
 
   <!-- 
     - favicon
@@ -162,11 +162,11 @@
           <div class="hero-content">
 
             <h1 class="h1 hero-title" data-reveal="top" data-reveal-delay="0.5s">
-              I'm User Interface Designer & Web Builder.
+              I'm UI/UX Designer & Web Builder.
             </h1>
 
             <p class="section-text" data-reveal="top" data-reveal-delay="0.75s">
-              Hello! I'm Truong Viet Hoan, a freelance user interface designer & WordPress Web Designer in Thai Nguyen, Viet Nam. I’m very passionate about the work that I do.
+              Hello! I'm Truong Viet Hoan, a freelance UI/UX designer & WordPress Web Builder in Thai Nguyen, Viet Nam. I’m very passionate about the work that I do.
             </p>
 
             <div class="btn-wrapper" data-reveal="top" data-reveal-delay="1s">
